# llm_embedding

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/: __init__.py  app.py  embedder.py  models.py
tests/: test_api.py  test_embedder.py  test_models.py
