[project]
name = "qwen-embedding-service"
version = "0.1.0"
description = "Qwen3-embedding-0.6B API service using FastAPI and Sentence Transformers"
authors = [
    {name = "Matrix Agent", email = "agent@matrix.dev"}
]
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sentence-transformers>=2.4.0",
    "torch>=2.1.0",
    "pydantic>=2.5.0",
    "numpy>=1.24.0",
    "python-dotenv>=1.2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "httpx>=0.26.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "httpx>=0.26.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]
